--- a/css/stayle.css
+++ b/css/stayle.css
@@ -2,3 +2,15 @@
     background-image: url(https://gigaland.io/images/background/8.jpg);
     padding-top: 15px;
 }
+.nav-link{
+    color: white;
+    font-weight: 700;
+}
+.form-control{
+    color: white;
+    font-weight: 700;
+}
+.btn{
+    color: white;
+    font-weight: 700;
+}
