--- a/css/stayle.css
+++ b/css/stayle.css
@@ -29,3 +29,20 @@
     margin-left: 50px;
     text-decoration: none;
 }
+.q6{
+    color: #8364E2;
+    font-weight: 600;
+}
+.q7{
+    color: white;
+    font-weight: 700;
+    font-size: 35px;
+}
+.q3{
+    color: #A2A2A2;
+    font-weight: 600;
+}
+.q9{
+    color: white;
+    font-weight: 800;
+}
